--- a/contents/toppage.html
+++ b/contents/toppage.html
@@ -25,6 +25,7 @@
 <script type="text/javascript" src="JS/resize_event.js"></script>
 <script type="text/javascript" src="JS/readbody_event.js"></script>
 <script type="text/javascript" src="JS/member_scroll.js"></script>
+<script type="text/javascript" src="JS/background_event.js"></script>
 <!-- ここまでjavascript -->
 
 </head>
@@ -52,6 +53,7 @@
  	</div>
 	<!-- ここまでヘッダ -->
 
+	<img id="background_skin" src="images/background_oic.png"></img>
 	<!-- ここからメインコンテンツ -->
 		<div id="inclusion_maincontents" class="db">
 		<!-- ここから個別メニュー -->
@@ -98,7 +100,6 @@
 				</div>
 
 			</div>
-			<img id="obj2" src="images/test/harabe-san.png" class="dist1"></img>
 		</div>
 		<!-- メニュー２終了 -->
 		
@@ -185,19 +186,28 @@
 
 			
 			<!-- ここからメンバーアイコン -->
-			<div id="memberwrap">
-				<div id="member1" class="type_member">member1</div>
-				<div id="member2" class="type_member">member2</div>
-				<div id="member3" class="type_member">member3</div>
-				<div id="member4" class="type_member">member4</div>
-				<div id="member5" class="type_member">member5</div>
-				<div id="member6" class="type_member">member6</div>
-				<div id="member7" class="type_member">member7</div>
-				<div id="member8" class="type_member">member8</div>
-				<div id="member9" class="type_member">member9</div>
-				<div id="member10" class="type_member">member10</div>
-				<div id="member11" class="type_member">member11</div>
-				<div id="member12" class="type_member">member12</div>
+			<div id="memberwindow">
+				<div id="scroll_upside"></div>
+				<div id="frame_left"></div>
+
+				
+				<div id="memberwrap">
+					<div id="member1" class="type_member">member1</div>
+					<div id="member2" class="type_member">member2</div>
+					<div id="member3" class="type_member">member3</div>
+					<div id="member4" class="type_member">member4</div>
+					<div id="member5" class="type_member">member5</div>
+					<div id="member6" class="type_member">member6</div>
+					<div id="member7" class="type_member">member7</div>
+					<div id="member8" class="type_member">member8</div>
+					<div id="member9" class="type_member">member9</div>
+					<div id="member10" class="type_member">member10</div>
+					<div id="member11" class="type_member">member11</div>
+					<div id="member12" class="type_member">member12</div>
+				</div>
+				
+				<div id="frame_right"></div>
+				<div id="scroll_downside"></div>
 			</div>
 			<!-- ここまでメンバーアイコン -->
 			
