--- a/contents/toppage.html
+++ b/contents/toppage.html
@@ -152,8 +152,11 @@
 		<!-- メニュー４開始 -->
 		<div id="menu4_member" class="mainarea_common">
 			<!-- メニュー４内ウインドウ -->
+
 			<div id="member_sub_window">
-			<img id="charactor" src="images/member/yamada.png"></img>
+
+				<img id="charactor" src="images/member/yamada.png"></img>
+				<img id="window_frame" src="images/window00.png"></img>
 				<!-- メンバーのプロフィールウインドウ -->
 				<div id="personaldata_window">
 					<!-- ウインドウ左側：項目名 -->
@@ -161,7 +164,6 @@
 						<div class="subject_name">Name:</div>
 						<div class="subject_name">Grade:</div>
 						<div class="subject_name">Course:</div>	
-						<div class="subject_name">Birthplace:</div>
 						<div class="subject_name">Speciality:</div>
 						<div class="subject_name">Comment:</div>
 					</div>
@@ -172,7 +174,6 @@
 						<div id="personaldata_name" class="personaldata">No Name</div>
 						<div id="personaldata_grade" class="personaldata">None</div>
 						<div id="personaldata_course"> Nobe</div>
-						<div id="personaldata_birthplace">None</div>
 						<div id="personaldata_speciality">None</div>
 						<div id="personaldata_comment"></div>
 					</div>
@@ -185,7 +186,7 @@
 			
 			<!-- ここからメンバーアイコン -->
 			<div id="memberwindow">
-				<div id="scroll_upside"></div>
+				<div id="scroll_upside">▲</div>
 				<div id="frame_left"></div>
 
 				
@@ -205,7 +206,7 @@
 				</div>
 				
 				<div id="frame_right"></div>
-				<div id="scroll_downside"></div>
+				<div id="scroll_downside">▼</div>
 			</div>
 			<!-- ここまでメンバーアイコン -->
 			
