--- a/contents/toppage.html
+++ b/contents/toppage.html
@@ -35,7 +35,7 @@
 	<!-- 対応ブラウザ: IE9.0以上　Firefox 25.0以上　GoogleChrome 31.0以上 -->
 
 	<div id="intro_header">
-	<div id="header_wrap" class="db">
+	<div id="header_wrap">
 		<img src="images/test/img_logo.jpg" class="ITC_icon"></img>
 		<img id="ITC_String" src="images/header_string.png"></img>
 		<!-- ここからメニューリスト -->
@@ -55,11 +55,11 @@
 
 	<img id="background_skin" src="images/background_oic.png"></img>
 	<!-- ここからメインコンテンツ -->
-		<div id="inclusion_maincontents" class="db">
+		<div id="inclusion_maincontents">
 		<!-- ここから個別メニュー -->
 		
 		<!-- メニュー１(top)開始 -->
-		<div id="menu1_top" class="mainarea_common db">
+		<div id="menu1_top" class="mainarea_common">
 
 			<!-- キャッチコピー -->
 			<img id="vcatch" src="images/TitleLogo.png" class="vcatch"></img>
@@ -216,7 +216,7 @@
 	<!-- ここまでメインコンテンツ -->
 	
 	<!-- ここからフッタ -->
-	<div id="footer_wrap" class="db">
+	<div id="footer_wrap">
 		<div id="copyright" class="copyright">
 			● Copyright &copy;  2013	OIC - 大阪情報コンピュータ専門学校 ITCreate部<br>
 			All Right Reserved.
