コード修正前

--- a/contents/toppage.html
+++ b/contents/toppage.html
@@ -36,7 +36,7 @@
 
 	<div id="intro_header">
 	<div id="header_wrap">
-		<img src="images/test/img_logo.jpg" class="ITC_icon"></img>
+		<img src="images/test/img_logo.png" class="ITC_icon"></img>
 		<img id="ITC_String" src="images/header_string.png"></img>
 		<!-- ここからメニューリスト -->
 		<div>
