--- a/contents/toppage.html
+++ b/contents/toppage.html
@@ -5,7 +5,8 @@
 <title>Insert title here</title>
 
 <!-- ここからCSS -->
-<link rel="styleSheet" type="text/css" href="css/tagStyle.css">
+<link rel="styleSheet" type="text/css" href="css/topStyle.css">
+<link rel="styleSheet" type="text/css" href="css/commonStyle.css">
 <link rel="styleSheet" type="text/css" href="css/introStyle.css">
 <link rel="styleSheet" type="text/css" href="css/memberStyle.css">
 <link rel="styleSheet" type="text/css" href="css/activeStyle.css">
@@ -14,8 +15,8 @@
 
 <!-- ここからプラグイン -->
 <script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="JS/jQuery-mousewheel.js"></script><!-- マウスホイールjQueryプラグイン -->
-<script type="text/javascript" src="JS/modernizr.custom.69101.js"></script><!-- クロスブラウザ用プラグイン -->
+<script type="text/javascript" src="JS/Plugin/jQuery-mousewheel.js"></script><!-- マウスホイールjQueryプラグイン -->
+<script type="text/javascript" src="JS/Plugin/modernizr.custom.69101.js"></script><!-- クロスブラウザ用プラグイン -->
 <!-- ここまでプラグイン -->
 
 
@@ -67,7 +68,7 @@
 			
 			<!-- 更新情報 -->
 			<div id="whatsnew">
-				<ul id="renew_list">
+				<ul>
 					<li>
 						2013/12/01更新!&nbsp;
 						<a href="test.html" target="_blank">ホームページ作成開始！</a>
@@ -84,7 +85,7 @@
 		
 		<!-- メニュー２開始 -->
 		<div id="menu2_abst" class="mainarea_common">
-			<div id="obj1" class="dist1">
+			<div id="obj1">
 				<h1>自分達で話し、学び、創造する</h1>
 				<p>ITC部はシステム開発の部活動です。</p>
 				<p></p>
@@ -153,9 +154,8 @@
 		<div id="menu4_member" class="mainarea_common">
 			<!-- メニュー４内ウインドウ -->
 
-			<div id="member_sub_window">
-
-				<img id="charactor" src="images/member/yamada.png"></img>
+			<div id="member_window_wrap">
+				<img id="charactor" src="images/standby.png"></img>
 				<img id="window_frame" src="images/window00.png"></img>
 				<!-- メンバーのプロフィールウインドウ -->
 				<div id="personaldata_window">
@@ -171,11 +171,11 @@
 
 					<!-- ウインドウ右側:項目 -->	
 					<div id="myprofile">
-						<div id="personaldata_name" class="personaldata">No Name</div>
-						<div id="personaldata_grade" class="personaldata">None</div>
-						<div id="personaldata_course"> Nobe</div>
-						<div id="personaldata_speciality">None</div>
-						<div id="personaldata_comment"></div>
+						<div id="personaldata_name" class="personaldata"> </div>
+						<div id="personaldata_grade" class="personaldata"> </div>
+						<div id="personaldata_course"> </div>
+						<div id="personaldata_speciality"> </div>
+						<div id="personaldata_comment"> </div>
 					</div>
 					<!-- 項目終了 -->
 				</div>
@@ -189,7 +189,6 @@
 				<div id="scroll_upside">▲</div>
 				<div id="frame_left"></div>
 
-				
 				<div id="memberwrap">
 					<div id="member1" class="type_member">member1</div>
 					<div id="member2" class="type_member">member2</div>
