--- a/contents/toppage.html
+++ b/contents/toppage.html
@@ -48,7 +48,7 @@
 				<li><div id="btn4" class="menuicon_frame">部員紹介</div></li>
 			</ul>
 		</div>
-		<div id="debug">aa</div>
+		<div id="debug"></div>
 		<!-- メニューリスト終了 -->
 	</div>
  	</div>
@@ -70,11 +70,15 @@
 			<div id="whatsnew">
 				<ul>
 					<li>
-						2013/12/01更新!&nbsp;
+						2014/04/01&nbsp;
+						<a href="test.html" target="_blank">祝！　活動一周年記念！</a>
+					</li>
+					<li>
+						2013/12/01&nbsp;
 						<a href="test.html" target="_blank">ホームページ作成開始！</a>
 					</li>
 					<li>
-						2013/12/01更新!&nbsp;
+						2013/12/01&nbsp;
 						<a href="test.html" target="_blank">ホームページ作成始動！</a>
 					</li>
 				</ul>
